compiler/tests-spec/testData/psi/linked/constant-literals/real-literals/p-1/pos/1.1.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, real-literals -> paragraph 1 -> sentence 1
 * NUMBER: 1
 * DESCRIPTION: Simple real literals with a different whole-number part and fraction part.
 */

val value = 0.0
val value = 0.00
val value = 0.000
val value = 0.0000

val value = 00.0
val value = 000.00
val value = 0000.000

val value = 1.0
val value = 22.00
val value = 333.000
val value = 4444.0000
val value = 55555.0
val value = 666666.00
val value = 7777777.000
val value = 88888888.0000
val value = 999999999.0

val value = 0000000000.1234567890
val value = 123456789.23456789
val value = 2345678.345678
val value = 34567.4567
val value = 456.56
val value = 5.65
val value = 654.7654
val value = 76543.876543
val value = 8765432.98765432
val value = 987654321.0987654321

val value = 0.1111
val value = 1.22222
val value = 9.33333
val value = 9.444444
val value = 8.5555555
val value = 2.66666666
val value = 3.777777777
val value = 7.8888888888
val value = 6.99999999999
