compiler/tests-spec/testData/psi/linked/constant-literals/real-literals/p-1/neg/1.1.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, real-literals -> paragraph 1 -> sentence 1
 * NUMBER: 1
 * DESCRIPTION: Real literals with not allowed several dots.
 */

val value = 0..
val value = 000..
val value = 0.0.
val value = 00.0.
val value = 000.00.
val value = 0000.1.

val value = 0....
val value = 1.1..
val value = 2.2.3
val value = 3.0.0.0.0.0.0
val value = 4.00000.
val value = 5.1.2.3.4.5.6.
val value = 6..1..2...3..4..5
val value = 7.8..9...0....1
val value = 8.

val value = 1......................................................................................................
val value = 2....2.
val value = 333............3
val value = 4444..........4
val value = 55555.......................................................................................................55555
val value = 666666..............................................0.........................................................
val value = 7777777.............................................0.........................................................
val value = 88888888.9...0
val value = 999999999.0..2.

val value = 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000........
val value = 99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0.
val value = 222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222...0.1
val value = 555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555123456785012345678501234567850123456785012345678501234567850.0.1

val value = .0....
val value = .1.1..
val value = .2.2..3
val value = .3.0.0.0.0.0.0
val value = .4.00000.
val value = .5.1.2.3.4.5.6.
val value = .6..1..2.3.4..5
val value = .7.8..9...0....1
val value = .8.
